--- a/Planets/StoryBoards/Base.lproj/Main.storyboard
+++ b/Planets/StoryBoards/Base.lproj/Main.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -33,31 +32,28 @@
                                     <rect key="frame" x="0.0" y="0.0" width="120" height="140"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="MeL-gS-n8Y">
+                                        <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="MeL-gS-n8Y">
                                             <rect key="frame" x="9" y="8" width="102" height="117"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WzH-rW-3tF">
-                                                    <rect key="frame" x="0.0" y="0.0" width="104" height="84"/>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pMl-ho-G3a">
-                                                    <rect key="frame" x="31" y="84" width="42" height="84"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="i9k-pS-atR">
+                                                    <rect key="frame" x="0.0" y="0.0" width="98" height="95.5"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WzH-rW-3tF">
+                                                            <rect key="frame" x="0.0" y="0.0" width="98" height="75"/>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pMl-ho-G3a">
+                                                            <rect key="frame" x="28" y="75" width="42" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
                                             </subviews>
-                                            <constraints>
-                                                <constraint firstItem="WzH-rW-3tF" firstAttribute="leading" secondItem="MeL-gS-n8Y" secondAttribute="leading" id="3eY-p1-J9C"/>
-                                                <constraint firstAttribute="trailing" secondItem="WzH-rW-3tF" secondAttribute="trailing" id="oPl-TO-Jxh"/>
-                                            </constraints>
                                         </stackView>
                                     </subviews>
                                 </view>
-                                <constraints>
-                                    <constraint firstItem="MeL-gS-n8Y" firstAttribute="leading" secondItem="NPs-d8-gZF" secondAttribute="leadingMargin" id="72o-oz-fNZ"/>
-                                    <constraint firstAttribute="trailingMargin" secondItem="MeL-gS-n8Y" secondAttribute="trailing" id="YuI-SG-n3f"/>
-                                    <constraint firstAttribute="bottomMargin" secondItem="MeL-gS-n8Y" secondAttribute="bottom" id="c0J-T1-pfm"/>
-                                </constraints>
                                 <connections>
                                     <outlet property="planetImageView" destination="WzH-rW-3tF" id="8b2-BE-oC3"/>
                                     <outlet property="textLabel" destination="pMl-ho-G3a" id="jpW-IC-ek2"/>
